objects/IPCA_ThirdParty__c.object
<CustomObject>
    <description>For IP packages &amp; resold with our IP</description>
    <fields>
        <fullName>Addendum__c</fullName>
        <label>IP Config Addendum</label>
        <referenceTo>IP_Config__c</referenceTo>
        <relationshipLabel>Third-party IP</relationshipLabel>
        <relationshipName>Third_Party_IP</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Index__c</fullName>
        <label>Index</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>Called &quot;Owner&quot; in current addendum templates</description>
        <label>Source</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>IPCA ThirdParty</label>
    <nameField>
        <label>IPCA ThirdParty Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Third-party IP</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>